# mini_projeto_web_api

./: README.md  mini_projeto.py  pyproject.toml
